--- a/W1_Python_Recap.ipynb
+++ b/W1_Python_Recap.ipynb
@@ -540,10 +540,25 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "q7iWJ5X9InED"
+        "id": "q7iWJ5X9InED",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "995b89ac-2eca-49ec-cd58-128936b76771"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3\n"
+          ]
+        }
+      ],
+      "source": [
+        "listy = [1,2,3,6,9]\n",
+        "print(listy[2])"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -831,13 +846,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "KkAOHZN-0Ocd"
-      },
-      "outputs": [],
       "source": [
-        "# use this code cell to answer the question"
+        "import pandas as pd\n",
+        "\n",
+        "data = pd.read_csv('https://storage.googleapis.com/qm2/wk1/spotify-2023.csv')\n",
+        "\n",
+        "most_danceable_song = data.sort_values(by='danceability_%', ascending=False).iloc[0]\n",
+        "\n",
+        "streams_of_most_danceable_song = most_danceable_song['streams']\n",
+        "\n",
+        "print(f\"The most danceable song is '{most_danceable_song['track_name']}' by {most_danceable_song['artist(s)_name']} with {streams_of_most_danceable_song} streams.\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1BEdb9R8dYMd",
+        "outputId": "bc85d9d9-a60b-481f-ced4-9ee2124713ea"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The most danceable song is 'Peru' by Ed Sheeran, Fireboy DML with 108 streams.\n"
+          ]
+        }
       ]
     }
   ],
