--- a/W08. Diff-in-Diff.ipynb
+++ b/W08. Diff-in-Diff.ipynb
@@ -561,37 +561,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "0oz-7nfY9qC0"
-      },
-      "outputs": [],
-      "source": [
-        "models=[] # create empty list to store the models\n",
-        "names=[] # create empty list to store the names of the models\n",
-        "\n",
-        "for window in range(1,10): # loop through years from 2000 to 2020 in increments of 4\n",
-        "    did=df_s[(df_s['date']>=str(2014-window)+'-01-01') & (df_s['date']<=str(2014+window)+'-01-01') & df_s['state'].isin(['pennsylvania', 'new jersey'])] # subset the data within the window of interest around 2014\n",
-        "    did['post']=np.where(did['date']>='2014-01-01',1,0) # create a dummy variable indicating the period after the minimum wage increase\n",
-        "    did['treatment']=np.where(did['state']=='new jersey',1,0) # create a dummy variable for treatment\n",
-        "    did['post_treatment']=did['post']*did['treatment'] # create an interaction term between the post and treatment variables\n",
-        "    did_model = ols('unemployment ~ gdp+ post + treatment + post_treatment', did).fit() # run the difference in difference model\n",
-        "\n",
-        "    models.append(did_model) # append the model to the list of models\n",
-        "    names.append('± '+str(window)+' Year') # append the name of the model to the list of names\n",
-        "\n",
-        "table=summary_col( # create a regression table\n",
-        "    models, # pass the models to the summary_col function\n",
-        "    stars=True, # add stars denoting the p-values of the coefficient to the table; * p<0.05, ** p<0.01, *** p<0.001\n",
-        "    float_format='%0.3f', # set the decimal places to 3\n",
-        "    model_names=names, # set the names of the model\n",
-        "    info_dict = {\"N\":lambda x: \"{0:d}\".format(int(x.nobs))}) # add the number of observations to the table\n",
-        "\n",
-        "print(table) # print the table\n"
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "eGAGC7Nj9qC0"
@@ -626,6 +595,113 @@
       "source": [],
       "metadata": {
         "id": "4zEm2Rkb9rB-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 1. State with the largest increase in (real) minimum wage in the 1990s\n",
+        "\n",
+        "import pandas as pd\n",
+        "\n",
+        "URL = \"https://storage.googleapis.com/qm2/wk10/state_data.csv\"\n",
+        "df = pd.read_csv(URL, parse_dates=[\"date\"])\n",
+        "df[\"state\"] = df[\"state\"].str.strip().str.lower()\n",
+        "df[\"year\"] = df[\"date\"].dt.year\n",
+        "\n",
+        "annual = (df.loc[df[\"year\"].between(1989, 1999)]\n",
+        "            .sort_values([\"state\", \"date\"])\n",
+        "            .groupby([\"state\", \"year\"], as_index=False)\n",
+        "            .first())\n",
+        "\n",
+        "annual[\"d_minwage\"] = annual.groupby(\"state\")[\"minwage\"].diff()\n",
+        "\n",
+        "d90s = annual.loc[annual[\"year\"].between(1990, 1999)].copy()\n",
+        "top = d90s.sort_values(\"d_minwage\", ascending=False).iloc[0]\n",
+        "\n",
+        "treat_state = top[\"state\"]\n",
+        "treat_year  = int(top[\"year\"])\n",
+        "jump        = float(top[\"d_minwage\"])\n",
+        "\n",
+        "print(f\"Treatment state (largest real min-wage jump in 1990s): {treat_state.title()} in {treat_year}\")\n",
+        "print(f\"Increase in real min wage (YoY): {jump:.2f}\")"
+      ],
+      "metadata": {
+        "id": "BMJH_vIR9y1_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 2. Set a 5 year window on either side of the treatment date\n",
+        "start = pd.Timestamp(f\"{treat_year-5}-01-01\")\n",
+        "end   = pd.Timestamp(f\"{treat_year+5}-12-31\")\n",
+        "start = max(start, df[\"date\"].min())\n",
+        "end   = min(end,   df[\"date\"].max())\n",
+        "\n",
+        "print(f\"Window: {start.date()} .. {end.date()} (±5 years around {treat_year})\")"
+      ],
+      "metadata": {
+        "id": "wqb6hBqK95aB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 3. parallel trends plot using Alabama as a control group\n",
+        "control_state = \"alabama\"\n",
+        "\n",
+        "window_df = df[(df[\"date\"] >= start) & (df[\"date\"] <= end)]\n",
+        "use = window_df[window_df[\"state\"].isin([treat_state, \"alabama\"])].copy()\n",
+        "\n",
+        "# Plot\n",
+        "sns.lineplot(data=use, x=\"date\", y=\"unemployment\", hue=\"state\")\n",
+        "plt.axvline(pd.Timestamp(f\"{treat_year}-01-01\"), ls=\"--\")\n",
+        "plt.title(f\"Unemployment: {treat_state.title()} (treated) vs Alabama (control)\")\n",
+        "plt.ylabel(\"Unemployment rate (%)\")\n",
+        "plt.xlabel(\"\")\n",
+        "plt.legend(title=\"\")\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "Lf22AIzI-Itv"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 4. Run a Difference-in-Differences model\n",
+        "\n",
+        "cut = pd.Timestamp(f\"{treat_year}-01-01\")\n",
+        "use = use.copy()\n",
+        "use[\"post\"] = (use[\"date\"] >= cut).astype(int)\n",
+        "use[\"treatment\"] = (use[\"state\"] == treat_state).astype(int)\n",
+        "use[\"post_treatment\"] = use[\"post\"] * use[\"treatment\"]\n",
+        "\n",
+        "assert use[\"post\"].nunique() == 2 and use[\"treatment\"].nunique() == 2, \"Need both pre/post and treated/control.\"\n",
+        "\n",
+        "did_model = ols(\"unemployment ~ post + treatment + post_treatment\", data=use).fit()\n",
+        "print(did_model.summary())"
+      ],
+      "metadata": {
+        "id": "hpBFpdEG-Qit"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The analysis identifies Iowa as the state with the largest real minimum-wage increase in the 1990s, with a substantial jump occurring in 1991. Using Alabama as a control and applying a five-year window on either side of the policy change, a difference-in-differences model estimates the effect of the minimum-wage increase on unemployment. The DiD interaction coefficient is very small (0.067 percentage points), corresponding to roughly a 0.9% change relative to Iowa’s baseline unemployment rate. However, this effect is not statistically significant (p = 0.755), indicating no meaningful evidence that the minimum-wage increase affected unemployment in Iowa during this period."
+      ],
+      "metadata": {
+        "id": "yt3RL8BQ-nNO"
       }
     }
   ],
